Add full npm support

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backside Resource Management System",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "python build-depend.py"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,12 @@
   },
   "homepage": "https://github.com/Liadrinz/BR-MS#readme",
   "devDependencies": {
-    "babelify": "^8.0.0"
-  }
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.6.1",
+    "babelify": "^8.0.0",
+    "browserify": "^16.2.0",
+    "uglify-js": "^3.3.24",
+    "verify-identity-card": "0.0.2"
+  },
+  "dependencies": {}
 }
