--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-env": "^1.6.1",
     "babelify": "^8.0.0",
     "browserify": "^16.2.0",
+    "jquery": "^3.3.1",
     "uglify-js": "^3.3.24",
     "verify-identity-card": "0.0.2"
   },
