--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babelify": "^8.0.0",
     "browserify": "^16.2.0",
     "dateformat": "^3.0.3",
+    "element-china-area-data": "^4.1.0",
     "jquery": "^3.3.1",
     "uglify-js": "^3.3.24",
     "verify-identity-card": "0.0.2"
