--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "element-china-area-data": "^4.1.0",
     "jquery": "^3.3.1",
     "uglify-js": "^3.3.24",
-    "verify-identity-card": "0.0.2"
+    "verify-identity-card": "0.0.2",
+    "vue-amap": "^0.5.7"
   },
   "dependencies": {}
 }
